# QML

QML_1/1/: CMakeLists.txt  main.qml
QML_1/2/: CMakeLists.txt
QML_2/: main.qml
QML_3/: CMakeLists.txt  Footer.qml  Header.qml  main.qml  qml.qrc
QML_4/: CMakeLists.txt  main.qml  pagefooter.qml  qml.qrc
QML_5/: ButtonComponent.qml  CMakeLists.txt  main.qml  qml.qrc
QML_6/: CMakeLists.txt  PageGreen.qml  PageRed.qml  PageYellow.qml  main.qml
project/: CMakeLists.txt  CalculatorLogic.js  PageAbout.qml  PageEquipment.qml  PageMain.qml  main.qml  qml.qrc
